Final touches of CSS

--- a/index.html
+++ b/index.html
@@ -24,9 +24,17 @@
     <div class="container" id="weather-app">
       <div class="row" id="search-form">
         <form>
-          <input type="text" placeholder="Enter a city..." />
-          <input type="submit" value="Search" />
-          <button>My location</button>
+          <input
+            type="text"
+            class="search-form city-input"
+            placeholder="Enter a city..."
+          />
+          <input
+            type="submit"
+            class="search-form submit-search"
+            value="Search"
+          />
+          <button class="location-button">My location</button>
         </form>
       </div>
       <div class="row main">
@@ -78,12 +86,14 @@
           </table>
         </div>
       </div>
-      <a
-        href="https://github.com/annnortis/weather-app-project-improved"
-        target="_blank"
-        >Open-source code</a
+      <span class="coder"
+        ><a
+          href="https://github.com/annnortis/weather-app-project-improved"
+          target="_blank"
+          >Open-source code</a
+        >
+        by Anna Yalova</span
       >
-      by Anna Yalova
     </div>
   </body>
 </html>
