--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
             <tbody>
               <tr>
                 <td>Feels like</td>
-                <td>11°</td>
+                <td id="feels-like">11°</td>
               </tr>
               <tr>
                 <td>Humidity</td>
-                <td>76%</td>
+                <td id="humidity">76%</td>
               </tr>
               <tr>
                 <td>Wind</td>
-                <td>11 km/h</td>
+                <td id="wind-speed">11 km/h</td>
               </tr>
             </tbody>
           </table>
@@ -95,5 +95,6 @@
         by Anna Yalova</span
       >
     </div>
+    <script src="sources/script.js"></script>
   </body>
 </html>
