Added unit conversions in highest-temperature-element, lowest-temperature-element and feels-like-element

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <tbody>
               <tr>
                 <td>Feels like</td>
-                <td id="feels-like">11°</td>
+                <td class="feels-like"><span id="feels-like">11</span>°</td>
               </tr>
               <tr>
                 <td>Humidity</td>
