--- a/index.html
+++ b/index.html
@@ -86,6 +86,29 @@
           </table>
         </div>
       </div>
+      <div class="forecast" id="forecast">
+        <div class="row">
+          <div class="col-2" id="forecast-element">
+            <div class="forecast-day">Sun</div>
+            <div class="forecast-image">
+              <img
+                src="sources/images/weather-icons/03d.png"
+                alt="Weather Stand Cloud"
+                id="forecast-image"
+              />
+            </div>
+            <div class="forecast-temps">
+              <span class="forecast-max"
+                ><span id="forecast-max-degrees">27</span>°</span
+              >
+              <span class="forecast-min"
+                ><span id="forecast-min-degrees">17</span>°</span
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+
       <span class="coder"
         ><a
           href="https://github.com/annnortis/weather-app-project-improved"
