Deleted unit conversion
Deleted unit conversion and added more functions to "My Location" button

--- a/index.html
+++ b/index.html
@@ -51,14 +51,7 @@
           <ul>
             <li class="date">Friday 12:44</li>
             <li class="degrees">
-              <span id="celsius-degrees">12</span>°<a
-                href="#"
-                id="celsius-link"
-                class="active link"
-                >C</a
-              ><span id="inbetween"> | </span>
-
-              <a href="#" id="farenheit-link" class="link">F</a>
+              <span id="celsius-degrees">12</span>°<span id="celsius">C</span>
             </li>
             <li class="highest-lowest">
               H:<span id="highest-temp">16</span>° L:<span id="lowest-temp"
